# project-codex

./: .gitignore  AGENTS.md  GIT.md  README.md  package.json
.husky/: pre-commit
bookfellow-business/: AGENTS.md  README.md
bookfellow-business/.cursor/: bookfellow-silos.code-workspace  hooks.json  skills
bookfellow-business/.cursor/dashboard/: README.md  build-order.md  market.md  monetization.md  ops.md  product.md  (+3 more)
bookfellow-business/docs/: dual-account.md  git.md  north-star.md  thesis.md  vision.md  www-feed.md
bookfellow-business/secrets/: README.md  gemini.env.example
bookfellow-www/: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
bookfellow-www/.cursor/: backlog.md  build-order.md  hooks.json  lanes.md
bookfellow-www/.husky/: pre-commit
bookfellow-www/app/: Dockerfile  README.md  next.config.ts  package.json
bookfellow-www/docs/: business-feed.md  git.md  stack-tbd.md  stack.md
bookfellow-www/scripts/: www-lanes-sync.py
bookfellow-www/worker/: pyproject.toml
codex-business/: AGENTS.md  README.md
codex-business/docs/: dual-account.md  north-star.md  thesis.md  vision.md  www-feed.md
codex-www/: .env.example  .gitignore  AGENTS.md  README.md  package.json
codex-www/.cursor/: backlog.md  build-order.md  lanes.md
codex-www/app/: Dockerfile  README.md  next.config.ts  package.json
codex-www/docs/: business-feed.md  git.md  stack.md
codex-www/scripts/: migrate.mjs  www-lanes-sync.py
codex-www/worker/: Dockerfile  pyproject.toml
codex-www/worker/src/worker/: main.py
(+184 files in other folders)
