[project]
name = "projectcodex-worker"
version = "0.0.1"
description = "Project Codex BullMQ Python worker (lab)"
requires-python = ">=3.12"
dependencies = [
  "bullmq>=2.9.0",
  "pydantic>=2.11.0",
  "redis>=5.2.0",
]

[project.scripts]
projectcodex-worker = "worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
